--- a/nvchad/custom/.prettierrc.json
+++ b/nvchad/custom/.prettierrc.json
@@ -1,19 +1,10 @@
 {
-  "arrowParens": "always",
   "bracketSpacing": true,
   "embeddedLanguageFormatting": "auto",
-  "htmlWhitespaceSensitivity": "css",
-  "insertPragma": false,
-  "bracketSameLine": false,
-  "jsxSingleQuote": false,
-  "proseWrap": "preserve",
-  "quoteProps": "as-needed",
-  "requirePragma": false,
   "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
-  "useTabs": false,
-  "vueIndentScriptAndStyle": false,
-  "printWidth": 90
+  "printWidth": 90,
+  "endOfLine": "lf"
 }
