fix: swap kitty move tab kebinds

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -52,8 +52,8 @@ map kitty_mod+h         show_scrollback
 map kitty_mod+plus      increase_font_size
 map kitty_mod+minus     decrease_font_size
 map kitty_mod+backspace restore_font_size
-map kitty_mod+alt+left  move_tab_forward
-map kitty_mod+alt+right move_tab_backward
+map kitty_mod+alt+left  move_tab_backward
+map kitty_mod+alt+right move_tab_forward
 map ctrl+tab            send_text normal,application \x1b[9;5u # neovim <C-tab>
 map ctrl+shift+tab      send_text normal,application \x1b[9;6u # neovim <C-S-tab>
 map f11                 toggle_fullscreen
