feat: use DankMaterialShell

--- a/kitty/default.conf
+++ b/kitty/default.conf
@@ -1,9 +1,11 @@
+cursor #6B98D4
 cursor_text_color #6B98D4
 
 background #0C0E0F
 foreground #a9b1d6
 cursor #c0caf5
 selection_background #8e00e5
+url_color #61afef
 color0 #000000
 color8 #414868
 color1 #cc0403
