--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,7 +12,6 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 disable_ligatures never
 
-url_color #61afef
 url_style single
 
 open_url_modifiers kitty_mod
@@ -60,10 +59,11 @@ map f11                 toggle_fullscreen
 
 clear_all_shortcuts no
 
-cursor #6B98D4
 cursor_shape beam
 cursor_beam_thickness 1.8
+
 detect_urls yes
+strip_trailing_spaces smart
 
 repaint_delay 10
 input_delay 3
@@ -80,9 +80,9 @@ tab_bar_margin_color white
 
 # background_opacity 0.9
 
-background_image ~/.config/kitty/term.png
-background_image_layout scaled
 background_tint 0.95
+background_opacity 1.0
+background_blur 32
 
 scrollback_lines 2000
 
@@ -105,4 +105,6 @@ window_padding_width 0
 shell zsh
 term xterm-kitty
 
-include ./default.conf
+# include ./default.conf
+include ./dank-theme.conf
+include ./dank-tabs.conf
